[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Planets/Planet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/earth.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 103.311

[sub_resource type="CircleShape2D" id=2]
radius = 181.641

[node name="Planet" type="RigidBody2D" groups=[
"planets",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.25803, 0.814514 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="surface_objects" type="Node2D" parent="."]

[node name="GravityWell" type="Area2D" parent="."]
input_pickable = false
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityWell"]
shape = SubResource( 2 )

[connection signal="body_entered" from="GravityWell" to="." method="_on_GravityWell_body_entered"]
[connection signal="body_exited" from="GravityWell" to="." method="_on_GravityWell_body_exited"]
